--- a/src/main/webapp/WEB-INF/templates/auth/login.html
+++ b/src/main/webapp/WEB-INF/templates/auth/login.html
@@ -17,6 +17,6 @@
         </p>
         <button type="submit">Sign in</button>
     </form>
-    <p><a th:href="@{/auth/registration.html}">registration</a></p>
+    <p><a th:href="@{/auth/registration}">registration</a></p>
     </body>
 </html>
