--- a/src/main/webapp/WEB-INF/templates/users/index.html
+++ b/src/main/webapp/WEB-INF/templates/users/index.html
@@ -9,9 +9,11 @@
     <span th:text="${user.id}"></span><span>)</span>
     <span th:text="${user.firstName}"></span>
     <span th:text="${user.lastName}"></span>
-    <a th:href="@{/users/{id}/toAdmin(id=${user.id})}">make admin</a>
-    <a th:href="@{/users/{id}/toUser(id=${user.id})}">make user</a>
-    <a th:href="@{/users/{id}/delete(id=${user.id})}">delete</a>
+    <span th:if="${username != user.email}">
+        <a th:href="@{/users/{id}/toAdmin(id=${user.id})}">make admin</a>
+        <a th:href="@{/users/{id}/toUser(id=${user.id})}">make user</a>
+        <a th:href="@{/users/{id}/delete(id=${user.id})}">delete</a>
+    </span>
 </div>
 </body>
 </html>
